<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorH"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorF"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"/>

        <TextView
            android:id="@+id/menu_name"
            style="@style/font1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:maxLines="1"
            android:padding="15dp"
            android:text="@string/about" />

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/toolbar_button"
            android:contentDescription="@string/content_description_dialer_back"
            android:padding="15dp"
            android:src="@drawable/dialer_back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorC"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/splashscreen"
            android:visibility="gone" />

        <TextView
            style="@style/font22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/app_name" />

        <TextView
            style="@style/font2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_description"
            android:visibility="gone" />

        <TextView
            android:id="@+id/about_android_version"
            style="@style/font12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/about_version" />

        <TextView
            android:id="@+id/about_liblinphone_version"
            style="@style/font12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about_liblinphone_version" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorH"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/about_link"
            style="@style/font2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/about_link"
            android:textColorLink="@color/colorA"
            android:visibility="gone" />

        <TextView
            android:id="@+id/about_text"
            style="@style/font23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:text="@string/about_text"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorE" />

        <LinearLayout
            style="android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/send_log"
                style="android:attr/buttonBarButtonStyleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_background"
                android:padding="10dp"
                android:text="@string/menu_send_log"/>

            <Button
                android:id="@+id/reset_log"
                style="android:attr/buttonBarButtonStyleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_background"
                android:padding="10dp"
                android:text="@string/menu_reset_log"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
