<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorF"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:contentDescription="@string/content_description_switch_video"
                    android:padding="20dp"
                    android:src="@drawable/camera_button" />

                <ProgressBar
                    android:id="@+id/video_in_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/micro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:contentDescription="@string/content_description_toggle_micro"
                android:padding="10dp"
                android:src="@drawable/micro_default" />

            <ImageView
                android:id="@+id/speaker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:contentDescription="@string/content_description_toggle_speaker"
                android:padding="15dp"
                android:src="@drawable/speaker_default" />

            <ImageView
                android:id="@+id/audio_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:contentDescription="@string/content_description_audio_route"
                android:padding="15dp"
                android:src="@drawable/routes_default"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:contentDescription="@string/content_description_call_options"
                android:padding="15dp"
                android:src="@drawable/options_default" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dialer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@color/colorC"
                android:contentDescription="@string/content_description_numpad"
                android:padding="15dp"
                android:src="@drawable/footer_dialer" />

            <ImageView
                android:id="@+id/hang_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:background="@drawable/hangup"
                android:contentDescription="@string/content_description_hang_up"
                android:padding="12dp"
                android:src="@drawable/call_hangup" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@drawable/footer_button">

                <ImageView
                    android:id="@+id/chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/colorC"
                    android:contentDescription="@string/content_description_chat_button"
                    android:padding="15dp"
                    android:src="@drawable/footer_chat" />

                <TextView
                    android:id="@+id/missed_chats"
                    style="@style/font18"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/history_chat_indicator"
                    android:gravity="center"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>