<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/micro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/content_description_toggle_micro"
            android:padding="10dp"
            android:src="@drawable/micro_default" />

        <ImageView
            android:id="@+id/speaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/content_description_toggle_speaker"
            android:padding="15dp"
            android:src="@drawable/speaker_default" />

        <ImageView
            android:id="@+id/outgoing_hang_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/hangup"
            android:contentDescription="@string/content_description_hang_up"
            android:padding="12dp"
            android:src="@drawable/call_hangup" />

    </LinearLayout>

</RelativeLayout>