<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            style="@style/font6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="Already Registered"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/message_phone_number"
            style="@style/font11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/assistant_create_account_part_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/phone_number_label"
                        style="@style/font13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textAllCaps="true" />

                    <ImageView
                        android:id="@+id/info_phone_number"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/info" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/select_country"
                        style="@style/font8"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/resizable_assistant_button"
                        android:text="@string/select_your_country" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/dial_code"
                                android:layout_width="65dp"
                                android:layout_height="42dp"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/resizable_textfield"
                                android:gravity="center"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:text="+"
                                android:textColor="@color/colorB" />

                            <EditText
                                android:id="@+id/phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/resizable_textfield"
                                android:contentDescription="@string/content_description_phone_number_field"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:textColor="@color/colorB" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/phone_number_error_2"
                        style="@style/font20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/error"
                        android:visibility="invisible" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/font13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/assistant_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/resizable_textfield"
                    android:contentDescription="@string/content_description_username_field"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColor="@color/colorB" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/font13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/password"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/assistant_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/resizable_textfield"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorB" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:maxLines="1" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/use_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_with_username"
                android:visibility="visible" />

            <Button
                android:id="@+id/assistant_apply"
                style="@style/font8"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/assistant_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/assistant_login"
                android:textColor="@drawable/assistant_button_text_color" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>